Fixed Layout on Smaller Devices

--- a/style.css
+++ b/style.css
@@ -704,11 +704,25 @@ footer span {
         padding: 30px 5px;
         text-align: center;
     }
+    .project-container .left-part {
+        flex: 2;
+    }    
     .project-container .right-part {
-        width: 80%;
+        width: 70%;
     }
     .project-container .right-part .img-container img {
         border-radius: 10px;
+    }
+    .project-container h1 {
+        font-size: 1.5rem;
+        margin: 5px 20px;
+    }
+    .project-container .left-part .bottom-part {
+        margin-top: 20px;
+    }
+    .project-container .left-part .bottom-part p {
+        font-size: 1rem;
+        line-height: 25px;
     }
     /* --------x--------- projects page styles --------x--------- */
 }
@@ -730,7 +744,7 @@ footer span {
         padding: 5px 10px;
     }
     .container .lang-container {
-        top: 90%;
+        top: 88%;
     }
     .container .lang-container select {
         font-size: 12px;
@@ -812,6 +826,12 @@ footer span {
         margin-top: 10px;
         padding: 10px 10px;
     }
+    .project-container .left-part .bottom-part .projects-buttons {
+        flex-direction: column;
+        gap: 20px;
+        width: 60%;
+        align-self: center;
+    }
     /* -------x---------- projects page styles --------x--------- */
     /* ------------------ contact page styles ------------------ */
     .contact-container .form-container .form-title h1 {
@@ -886,9 +906,20 @@ footer span {
     .nav .nav-menu .nav-items .nav-link a {
         font-size: 12px;
     }
-    .project-container .left-part .bottom-part button {
+    .project-container h1 {
+        font-size: 1.1rem;
+        margin: 2px 10px;
+    }
+    .project-container .left-part .bottom-part p {
         font-size: .9rem;
+        line-height: 25px;
+    }
+    .project-container .left-part .bottom-part button {
+        font-size: .8rem;
         padding: 4px 12px;
+    }
+    .project-container .right-part {
+        width: 60%;
     }
     /* ---------x-------- projects page styles --------x--------- */
 
